chor: implemented all the android specific properties

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
   ],
   "include": [
     "node_modules/tns-core-modules/tns-core-modules.d.ts",
+    "node_modules/tns-platform-declarations/tns-core-modules/android17.d.ts",
+    "node_modules/tns-platform-declarations/tns-core-modules/ios.d.ts",
     "index.ts",
     "ui/**/*.ts"
   ],
