chor: update readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nativescript-accessibility-ext",
-  "version": "0.0.1",
+  "name": "@nota/nativescript-accessibility-ext",
+  "version": "0.0.2",
   "description": "Nativescript plugin for enabling accessiblity features",
   "main": "index.js",
   "scripts": {
