chor: implement more of the api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "module": "commonjs",
     "target": "es5",
     "noImplicitAny": false,
-    "sourceMap": false
+    "noEmitOnError": false,
+    "sourceMap": false,
+    "noLib": true
   },
   "files": [
     "index.ts"
@@ -13,7 +15,9 @@
   "include": [
     "node_modules/tns-core-modules/tns-core-modules.d.ts",
     "node_modules/tns-platform-declarations/tns-core-modules/android17.d.ts",
-    "node_modules/tns-platform-declarations/tns-core-modules/ios.d.ts",
+    "node_modules/tns-platform-declarations/tns-core-modules/ios/ios.d.ts",
+    "node_modules/typescript/lib/lib.es5.d.ts",
+    "references.d.ts",
     "index.ts",
     "ui/**/*.ts"
   ],
