--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,15 +10,14 @@
     "noLib": true
   },
   "files": [
-    "index.ts"
-  ],
-  "include": [
+    "index.ts",
     "node_modules/tns-core-modules/tns-core-modules.d.ts",
     "node_modules/tns-platform-declarations/tns-core-modules/android17.d.ts",
     "node_modules/tns-platform-declarations/tns-core-modules/ios/ios.d.ts",
     "node_modules/typescript/lib/lib.es5.d.ts",
-    "references.d.ts",
-    "index.ts",
+    "references.d.ts"
+  ],
+  "include": [
     "ui/**/*.ts"
   ],
   "exclude": [
