--- a/demo/package.json
+++ b/demo/package.json
@@ -20,7 +20,7 @@
     "@angular/router": "3.1.2",
     "@nota/nativescript-accessibility-ext": "file:..",
     "nativescript-angular": "1.1.2",
-    "nativescript-theme-core": "^0.1.3",
+    "nativescript-theme-core": "^0.1.5",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-beta.12",
     "tns-core-modules": "2.3.0"
@@ -30,6 +30,7 @@
     "babel-types": "6.18.0",
     "babylon": "6.13.1",
     "lazy": "1.0.11",
+    "nativescript-dev-sass": "^0.4.1",
     "nativescript-dev-typescript": "^0.3.2",
     "typescript": "^2.0.6",
     "zone.js": "~0.6.21"
