fix: adds inlineSourceMap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "noEmitOnError": false,
     "noEmitHelpers": true,
     "sourceMap": false,
+    "inlineSourceMap": true,
     "noLib": true
   },
   "files": [
