--- a/demo/package.json
+++ b/demo/package.json
@@ -6,7 +6,7 @@
   "nativescript": {
     "id": "dk.nota.accessdemo",
     "tns-android": {
-      "version": "2.5.0-next-2016-11-02-1341"
+      "version": "2.4.1"
     },
     "tns-ios": {
       "version": "2.5.0-2016-11-1-1"
@@ -26,7 +26,7 @@
     "nativescript-theme-core": "^0.1.5",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-beta.12",
-    "tns-core-modules": "next"
+    "tns-core-modules": "^2.4.0"
   },
   "devDependencies": {
     "babel-traverse": "6.18.0",
