--- a/demo/package.json
+++ b/demo/package.json
@@ -6,27 +6,28 @@
   "nativescript": {
     "id": "dk.nota.accessdemo",
     "tns-android": {
-      "version": "2.4.1"
+      "version": "2.5.0"
     },
     "tns-ios": {
       "version": "2.5.0-2016-11-1-1"
     }
   },
   "dependencies": {
-    "@angular/common": "2.1.2",
-    "@angular/compiler": "2.1.2",
-    "@angular/core": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/platform-browser-dynamic": "2.1.2",
-    "@angular/router": "3.1.2",
+    "@angular/common": "~2.4.4",
+    "@angular/compiler": "~2.4.4",
+    "@angular/core": "~2.4.4",
+    "@angular/forms": "~2.4.4",
+    "@angular/http": "~2.4.4",
+    "@angular/platform-browser": "~2.4.4",
+    "@angular/platform-browser-dynamic": "~2.4.4",
+    "@angular/router": "~3.4.4",
     "@nota/nativescript-accessibility-ext": "file:..",
-    "nativescript-angular": "1.1.2",
-    "nativescript-theme-core": "^0.1.5",
+    "nativescript-angular": "~1.4.0",
+    "nativescript-theme-core": "^1.0.0",
     "reflect-metadata": "~0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "tns-core-modules": "^2.4.0"
+    "rxjs": "~5.0.0",
+    "tns-core-modules": "~2.5.0",
+    "zone.js": "~0.7.4"
   },
   "devDependencies": {
     "babel-traverse": "6.18.0",
@@ -35,7 +36,6 @@
     "lazy": "1.0.11",
     "nativescript-dev-sass": "^0.4.1",
     "nativescript-dev-typescript": "^0.3.2",
-    "typescript": "^2.0.6",
-    "zone.js": "~0.6.21"
+    "typescript": "~2.1.5"
   }
 }
