fix: removes unused variables and adds d.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": false,
     "pretty": true,
     "noEmitHelpers": true,
+    "noUnusedLocals": true,
     "inlineSourceMap": true,
     "noImplicitAny": false,
     "noImplicitReturns": true,
