--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "devDependencies": {
     "tns-core-modules": "^2.5.0",
     "tns-platform-declarations": "^2.5.0",
+    "nativescript-globalevents": "^1.1.2",
     "typescript": "^2.1.0"
   },
   "peerDependencies": {
-    "tns-core-modules": "^2.5.0"
+    "tns-core-modules": "^2.5.0",
+    "nativescript-globalevents": "^1.1.2"
   }
 }
