--- a/demo/package.json
+++ b/demo/package.json
@@ -6,36 +6,37 @@
   "nativescript": {
     "id": "dk.nota.accessdemo",
     "tns-android": {
-      "version": "2.5.0"
+      "version": "3.0.0"
     },
     "tns-ios": {
-      "version": "2.5.0-2016-11-1-1"
+      "version": "3.0.0"
     }
   },
   "dependencies": {
-    "@angular/common": "~2.4.4",
-    "@angular/compiler": "~2.4.4",
-    "@angular/core": "~2.4.4",
-    "@angular/forms": "~2.4.4",
-    "@angular/http": "~2.4.4",
-    "@angular/platform-browser": "~2.4.4",
-    "@angular/platform-browser-dynamic": "~2.4.4",
-    "@angular/router": "~3.4.4",
+    "@angular/animations": "~4.1.0",
+    "@angular/common": "~4.1.0",
+    "@angular/compiler": "~4.1.0",
+    "@angular/core": "~4.1.0",
+    "@angular/forms": "~4.1.0",
+    "@angular/http": "~4.1.0",
+    "@angular/platform-browser": "~4.1.0",
+    "@angular/platform-browser-dynamic": "~4.1.0",
+    "@angular/router": "~4.1.0",
     "@nota/nativescript-accessibility-ext": "file:..",
-    "nativescript-angular": "~1.4.0",
-    "nativescript-theme-core": "^1.0.0",
-    "reflect-metadata": "~0.1.8",
-    "rxjs": "~5.0.0",
-    "tns-core-modules": "~2.5.0",
-    "zone.js": "~0.7.4"
+    "nativescript-angular": "~3.0.0",
+    "nativescript-theme-core": "^1.0.4",
+    "reflect-metadata": "~0.1.10",
+    "rxjs": "~5.4.1",
+    "tns-core-modules": "~3.0.1",
+    "zone.js": "~0.8.12"
   },
   "devDependencies": {
-    "babel-traverse": "6.18.0",
-    "babel-types": "6.18.0",
-    "babylon": "6.13.1",
+    "babel-traverse": "6.25.0",
+    "babel-types": "6.25.0",
+    "babylon": "6.17.4",
     "lazy": "1.0.11",
-    "nativescript-dev-sass": "^0.4.1",
-    "nativescript-dev-typescript": "^0.3.2",
-    "typescript": "~2.1.5"
+    "nativescript-dev-sass": "^1.2.0",
+    "nativescript-dev-typescript": "^0.4.5",
+    "typescript": "~2.3.4"
   }
 }
