fix: remove way too much loggin in android a11y-delegates

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -9,6 +9,8 @@
             "dom",
             "es2015.iterable"
         ],
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "noEmitHelpers": true,
         "noEmitOnError": true,
         "baseUrl": ".",
