--- a/nativescript-accessibility-ext/package.json
+++ b/nativescript-accessibility-ext/package.json
@@ -16,7 +16,8 @@
     }
   },
   "scripts": {
-    "prepublish": "npm run tsc",
+    "sass": "rm -rf css && node-sass --recursive --output css scss",
+    "prepublish": "npm run tsc && npm run sass",
     "tsc": "tsc",
     "tsc-w": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -36,9 +37,10 @@
   },
   "homepage": "https://github.com/m-abs/nativescript-accessibility-ext/#readme",
   "devDependencies": {
+    "nativescript-globalevents": "^1.1.2",
+    "node-sass": "^4.5.3",
     "tns-core-modules": "^2.5.0",
     "tns-platform-declarations": "^2.5.0",
-    "nativescript-globalevents": "^1.1.2",
     "typescript": "^2.1.0"
   },
   "peerDependencies": {
