--- a/demo/package.json
+++ b/demo/package.json
@@ -12,6 +12,9 @@
       "version": "3.1.0"
     }
   },
+  "scripts": {
+    "preinstall": "cd ../nativescript-accessibility-ext && npm i && npm prune && npm pack"
+  },
   "dependencies": {
     "@angular/common": "~4.1.0",
     "@angular/compiler": "~4.1.0",
@@ -21,7 +24,7 @@
     "@angular/platform-browser": "~4.1.0",
     "@angular/platform-browser-dynamic": "~4.1.0",
     "@angular/router": "~4.1.0",
-    "@nota/nativescript-accessibility-ext": "file:../nativescript-accessibility-ext",
+    "@nota/nativescript-accessibility-ext": "file:../nativescript-accessibility-ext/nota-nativescript-accessibility-ext-2.5.6.tgz",
     "nativescript-angular": "~1.5.0",
     "nativescript-globalevents": "^1.1.2",
     "nativescript-theme-core": "^1.0.4",
@@ -38,6 +41,6 @@
     "nativescript-dev-sass": "^1.2.0",
     "nativescript-dev-typescript": "^0.4.5",
     "tns-platform-declarations": "^3.0.1",
-    "typescript": "^2.3.4"
+    "typescript": "~2.3.4"
   }
 }
