--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -5,3 +5,9 @@ app/theme-core-scss/
 app/core.*.scss
 platforms
 app/_bootstrap-map.scss
+node_modules
+*.d.ts
+app/vendor-platform.android.ts
+app/vendor-platform.ios.ts
+app/vendor.ts
+tsconfig.aot.json
