--- a/demo/package.json
+++ b/demo/package.json
@@ -13,34 +13,52 @@
     }
   },
   "scripts": {
-    "preinstall": "cd ../nativescript-accessibility-ext && npm i && npm prune && npm pack"
+    "preinstall": "cd ../nativescript-accessibility-ext && npm i && npm prune && npm pack",
+    "ns-bundle": "ns-bundle",
+    "start-android-bundle": "npm run ns-bundle --android --run-app",
+    "start-ios-bundle": "npm run ns-bundle --ios --run-app",
+    "build-android-bundle": "npm run ns-bundle --android --build-app",
+    "build-ios-bundle": "npm run ns-bundle --ios --build-app",
+    "publish-ios-bundle": "npm run ns-bundle --ios --publish-app",
+    "generate-android-snapshot": "generate-android-snapshot --targetArchs arm,arm64,ia32 --install"
   },
   "dependencies": {
-    "@angular/common": "~4.1.0",
-    "@angular/compiler": "~4.1.0",
-    "@angular/core": "~4.1.0",
-    "@angular/forms": "~4.1.0",
-    "@angular/http": "~4.1.0",
-    "@angular/platform-browser": "~4.1.0",
-    "@angular/platform-browser-dynamic": "~4.1.0",
-    "@angular/router": "~4.1.0",
-    "@nota/nativescript-accessibility-ext": "file:../nativescript-accessibility-ext/nota-nativescript-accessibility-ext-2.5.6.tgz",
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/http": "~4.0.0",
+    "@angular/platform-browser": "~4.0.0",
+    "@angular/platform-browser-dynamic": "~4.0.0",
+    "@angular/router": "~4.0.0",
+    "@nota/nativescript-accessibility-ext": "file:../nativescript-accessibility-ext/nota-nativescript-accessibility-ext-2.5.7.tgz",
     "nativescript-angular": "~1.5.0",
     "nativescript-globalevents": "^1.1.2",
     "nativescript-theme-core": "^1.0.4",
     "reflect-metadata": "~0.1.10",
-    "rxjs": "~5.4.1",
-    "tns-core-modules": "^2.5.2",
+    "rxjs": "~5.4.2",
+    "tns-core-modules": "^2.5.3",
     "zone.js": "~0.8.12"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "~4.0.0",
+    "@ngtools/webpack": "1.2.13",
     "babel-traverse": "6.25.0",
     "babel-types": "6.25.0",
     "babylon": "6.17.4",
+    "copy-webpack-plugin": "~4.0.1",
+    "extract-text-webpack-plugin": "~2.1.0",
     "lazy": "1.0.11",
+    "nativescript-css-loader": "~0.26.1",
     "nativescript-dev-sass": "^1.2.0",
-    "nativescript-dev-typescript": "^0.4.5",
+    "nativescript-dev-typescript": "^0.5.0",
+    "nativescript-dev-webpack": "^0.7.2",
+    "raw-loader": "~0.5.1",
+    "resolve-url-loader": "~2.1.0",
     "tns-platform-declarations": "^3.0.1",
-    "typescript": "~2.3.4"
+    "typescript": "~2.1.6",
+    "webpack": "^2.0.0",
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-sources": "~1.0.1"
   }
 }
