--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "3.0.0-alpha.7",
+  "version": "3.0.0-alpha.8",
   "description": "Nativescript plugin for enabling accessiblity features",
   "main": "index.js",
   "scripts": {
     "postinstall": "npm run pack:plugin && npm run install:demo",
     "pack:plugin": "cd nativescript-accessibility-ext && npm pack",
-    "install:demo": "cd demo && npm i && npm prune",
+    "demo:android": "npm run install:demo && cd demo && tns debug android",
+    "demo:ios": "npm run install:demo && cd demo && tns debug ios",
+    "bundle:android": "npm run install:demo && cd demo && npm run start-android-bundle",
+    "bundle:ios": "npm run install:demo && cd demo && npm run start-ios-bundle",
+    "install:demo": "npm run build && cd demo && npm i && npm prune",
     "sass": "cd nativescript-accessibility-ext && rm -rf css && node-sass --recursive --output css scss",
     "build": "npm run tsc && npm run sass",
     "tsc": "cd nativescript-accessibility-ext && tsc",
@@ -29,9 +33,9 @@
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "devDependencies": {
     "node-sass": "^4.5.3",
-    "tns-core-modules": "^3.0.0",
-    "tns-platform-declarations": "^3.0.0",
-    "nativescript-globalevents": "^1.1.0",
+    "tns-core-modules": "^3.1.0",
+    "tns-platform-declarations": "^3.1.0",
+    "nativescript-globalevents": "^1.1.2",
     "typescript": "^2.4.0"
   }
 }
