also transpile uglify-mangle-excludes.ts

--- a/nativescript-accessibility-ext/tsconfig.json
+++ b/nativescript-accessibility-ext/tsconfig.json
@@ -30,7 +30,8 @@
         "skipLibCheck": true
     },
     "files": [
-        "index.ts"
+        "index.ts",
+        "uglify-mangle-excludes.ts"
     ],
     "include": [
         "ui/**/*.ts",
