--- a/demo-ng/package.json
+++ b/demo-ng/package.json
@@ -22,17 +22,17 @@
     "build-ios-bundle": "npm run ns-bundle --ios --build-app"
   },
   "dependencies": {
-    "@angular/animations": "~4.2.0",
-    "@angular/common": "~4.2.0",
-    "@angular/compiler": "~4.2.0",
-    "@angular/core": "~4.2.0",
-    "@angular/forms": "~4.2.0",
-    "@angular/http": "~4.2.0",
-    "@angular/platform-browser": "~4.2.0",
-    "@angular/platform-browser-dynamic": "~4.2.0",
-    "@angular/router": "~4.2.0",
-    "@nota/nativescript-accessibility-ext": "file:../nativescript-accessibility-ext",
-    "nativescript-angular": "^4.2.0",
+    "@angular/animations": "~4.4.0",
+    "@angular/common": "~4.4.0",
+    "@angular/compiler": "~4.4.0",
+    "@angular/core": "~4.4.0",
+    "@angular/forms": "~4.4.0",
+    "@angular/http": "~4.4.0",
+    "@angular/platform-browser": "~4.4.0",
+    "@angular/platform-browser-dynamic": "~4.4.0",
+    "@angular/router": "~4.4.0",
+    "@nota/nativescript-accessibility-ext": "file:../src",
+    "nativescript-angular": "~4.4.0",
     "nativescript-globalevents": "^1.1.2",
     "nativescript-theme-core": "^1.0.4",
     "reflect-metadata": "~0.1.10",
@@ -41,7 +41,7 @@
     "zone.js": "~0.8.12"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~4.2.0",
+    "@angular/compiler-cli": "~4.4.0",
     "@ngtools/webpack": "^1.3.0",
     "babel-traverse": "6.25.0",
     "babel-types": "6.25.0",
