--- a/demo/package.json
+++ b/demo/package.json
@@ -9,10 +9,10 @@
     }
   },
   "dependencies": {
+    "@nota/nativescript-accessibility-ext": "file:../src",
     "nativescript-theme-core": "^1.0.4",
     "nativescript-unit-test-runner": "^0.3.4",
-    "nativescript-accessibility-ext": "../src",
-    "tns-core-modules": "^3.1.1"
+    "tns-core-modules": "^3.2.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "~3.1.3",
