--- a/src/package.json
+++ b/src/package.json
@@ -1,54 +1,83 @@
 {
-    "name": "nativescript-accessibility-ext",
-    "version": "1.0.0",
-    "description": "Your awesome NativeScript plugin.",
-    "main": "accessibility-ext",
+    "name": "@nota/nativescript-accessibility-ext",
+    "version": "3.2.0-alpha.2",
+    "description": "Nativescript plugin for enabling accessiblity features",
+    "main": "index.js",
     "typings": "index.d.ts",
     "nativescript": {
         "platforms": {
-            "android": "3.0.0",
-            "ios": "3.0.0"
+            "android": "3.2.0",
+            "ios": "3.2.0"
+        },
+        "plugin": {
+            "nan": true,
+            "pan": true,
+            "core3": true,
+            "category": "Utilities"
         }
     },
     "scripts": {
+        "scss": "node-sass --recursive --output css scss",
         "tsc": "tsc -skipLibCheck",
-        "build": "npm i && tsc",
+        "build": "npm i && tsc && npm run scss",
         "postclone": "npm i && node scripts/postclone.js && cd ../demo && npm i && cd ../src && npm run plugin.link",
         "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
         "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
         "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
         "plugin.link": "npm link && cd ../demo && npm link nativescript-accessibility-ext && cd ../src",
         "plugin.tscwatch": "npm run tsc -- -w",
+        "plugin.sasswatch": "npm run sass && npm run sass -- --watch",
         "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
         "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
         "demo.reset": "cd ../demo && rimraf platforms",
-        "plugin.prepare": "npm run tsc && cd ../demo && tns plugin remove nativescript-accessibility-ext && tns plugin add ../src",
+        "demo-ng.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
+        "demo-ng.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
+        "demo-ng.reset": "cd ../demo && rimraf platforms",
+        "plugin.prepare": "npm run build && (cd ../demo && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src) && (cd ../demo-ng && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src)",
         "clean": "cd ../demo && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
         "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Notalib/nativescript-accessibility-ext.git"
     },
     "keywords": [
         "NativeScript",
         "JavaScript",
+        "Accessibility",
+        "angular",
         "Android",
+        "TalkBack",
+        "VoiceOver",
         "iOS"
     ],
     "author": {
-        "name": "Your Name",
+        "name": "Morten Sjøgren <m_abs@mabs.dk>",
         "email": "youremail@yourdomain.com"
     },
+    "contributors": {
+        "name": "Daniel Freiling",
+        "email": "ddfreiling@gmail.com"
+    },
+    "license": "BSD-3-Clause",
     "bugs": {
         "url": "https://github.com/Notalib/nativescript-accessibility-ext/issues"
     },
-    "license": "Apache-2.0",
-    "homepage": "https://github.com/Notalib/nativescript-accessibility-ext",
+    "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
     "readmeFilename": "README.md",
     "devDependencies": {
-        "tns-core-modules": "^3.1.0",
-        "tns-platform-declarations": "^3.1.0",
-        "typescript": "~2.3.0",
+        "nativescript-globalevents": "^1.2.0",
+        "node-sass": "^4.5.3",
         "prompt": "^1.0.0",
         "rimraf": "^2.5.0",
-        "tslint": "^5.0.0"
+        "tns-core-modules": "^3.2.0",
+        "tns-platform-declarations": "^3.2.0",
+        "tslint": "^5.0.0",
+        "typescript": "~2.3.0"
+    },
+    "peerDependencies": {
+        "tns-core-modules": "^3.2.0",
+        "nativescript-globalevents": "^1.1.2"
     },
     "dependencies": {},
     "bootstrapper": "nativescript-plugin-seed"
