--- a/src/package.json
+++ b/src/package.json
@@ -30,8 +30,8 @@
         "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
         "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
         "demo.reset": "cd ../demo && rimraf platforms",
-        "demo-ng.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
-        "demo-ng.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
+        "demo-ng.ios": "npm i && npm run tsc && cd ../demo-ng && tns run ios --syncAllFiles",
+        "demo-ng.android": "npm i && npm run tsc && cd ../demo-ng && tns run android --syncAllFiles",
         "demo-ng.reset": "cd ../demo && rimraf platforms",
         "plugin.prepare": "npm run build && (cd ../demo && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src) && (cd ../demo-ng && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src)",
         "clean": "cd ../demo && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
