--- a/demo/package.json
+++ b/demo/package.json
@@ -22,43 +22,44 @@
     "build-ios-bundle": "npm run ns-bundle --ios --build-app"
   },
   "dependencies": {
-    "@angular/animations": "~4.2.0",
-    "@angular/common": "~4.2.0",
-    "@angular/compiler": "~4.2.0",
-    "@angular/core": "~4.2.0",
-    "@angular/forms": "~4.2.0",
-    "@angular/http": "~4.2.0",
-    "@angular/platform-browser": "~4.2.0",
-    "@angular/platform-browser-dynamic": "~4.2.0",
-    "@angular/router": "~4.2.0",
+    "@angular/animations": "~4.4.6",
+    "@angular/common": "~4.4.6",
+    "@angular/compiler": "~4.4.6",
+    "@angular/core": "~4.4.6",
+    "@angular/forms": "~4.4.6",
+    "@angular/http": "~4.4.6",
+    "@angular/platform-browser": "~4.4.6",
+    "@angular/platform-browser-dynamic": "~4.4.6",
+    "@angular/router": "~4.4.6",
     "@nota/nativescript-accessibility-ext": "file:../nativescript-accessibility-ext",
-    "nativescript-angular": "^4.2.0",
-    "nativescript-globalevents": "^1.1.2",
+    "nativescript-angular": "^4.4.1",
+    "nativescript-globalevents": "^1.2.1",
     "nativescript-theme-core": "^1.0.4",
     "reflect-metadata": "~0.1.10",
-    "rxjs": "~5.4.2",
+    "rxjs": "~5.5.1",
     "tns-core-modules": "^3.2.0",
-    "zone.js": "~0.8.12"
+    "zone.js": "~0.8.18"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~4.2.0",
-    "@ngtools/webpack": "^1.3.0",
-    "babel-traverse": "6.25.0",
-    "babel-types": "6.25.0",
-    "babylon": "6.17.4",
-    "copy-webpack-plugin": "~4.0.1",
-    "extract-text-webpack-plugin": "~2.1.0",
+    "@angular/compiler-cli": "~4.4.6",
+    "@ngtools/webpack": "^1.7.4",
+    "babel-traverse": "6.26.0",
+    "babel-types": "6.26.0",
+    "babylon": "6.18.0",
+    "copy-webpack-plugin": "~4.2.0",
+    "extract-text-webpack-plugin": "~3.0.1",
     "lazy": "1.0.11",
     "nativescript-css-loader": "~0.26.1",
-    "nativescript-dev-sass": "~1.1.0",
-    "nativescript-dev-typescript": "^0.5.0",
-    "nativescript-dev-webpack": "^0.7.2",
+    "nativescript-dev-sass": "~1.3.2",
+    "nativescript-dev-typescript": "^0.5.1",
+    "nativescript-dev-webpack": "^0.8.0",
     "raw-loader": "~0.5.1",
-    "resolve-url-loader": "~2.1.0",
-    "tns-platform-declarations": "^3.0.1",
-    "typescript": "^2.2.0",
-    "webpack": "^2.0.0",
-    "webpack-bundle-analyzer": "^2.8.2",
-    "webpack-sources": "~1.0.1"
+    "resolve-url-loader": "~2.1.1",
+    "tns-platform-declarations": "^3.2.0",
+    "typescript": "^2.5.3",
+    "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-sources": "~1.0.1",
+    "nativescript-worker-loader": "~0.8.1"
   }
 }
