--- a/src/package.json
+++ b/src/package.json
@@ -6,8 +6,8 @@
     "typings": "index.d.ts",
     "nativescript": {
         "platforms": {
-            "android": "3.2.0",
-            "ios": "3.2.0"
+            "android": "3.3.0",
+            "ios": "3.3.0"
         },
         "plugin": {
             "nan": true,
@@ -26,7 +26,8 @@
         "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
         "plugin.link": "npm link && cd ../demo && npm link nativescript-accessibility-ext && cd ../src",
         "plugin.tscwatch": "npm run tsc -- -w",
-        "plugin.sasswatch": "npm run sass && npm run sass -- --watch",
+        "plugin.sasswatch": "npm run scss && npm run scss -- --watch",
+        "plugin.watch": "npm-run-all --parallel plugin.tscwatch plugin.sasswatch",
         "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
         "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
         "demo.reset": "cd ../demo && rimraf platforms",
@@ -52,8 +53,8 @@
         "iOS"
     ],
     "author": {
-        "name": "Morten Sjøgren <m_abs@mabs.dk>",
-        "email": "youremail@yourdomain.com"
+        "name": "Morten Sjøgren",
+        "email": "m_abs@mabs.dk"
     },
     "contributors": {
         "name": "Daniel Freiling",
@@ -66,18 +67,19 @@
     "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
     "readmeFilename": "README.md",
     "devDependencies": {
-        "nativescript-globalevents": "^1.2.0",
-        "node-sass": "^4.5.3",
+        "nativescript-globalevents": "~1.2.0",
+        "node-sass": "~4.5.3",
+        "npm-run-all": "^4.1.1",
         "prompt": "^1.0.0",
         "rimraf": "^2.5.0",
-        "tns-core-modules": "^3.2.0",
+        "tns-core-modules": "^3.3.0",
         "tns-platform-declarations": "^3.2.0",
         "tslint": "^5.0.0",
         "typescript": "~2.3.0"
     },
     "peerDependencies": {
         "tns-core-modules": "^3.2.0",
-        "nativescript-globalevents": "^1.1.2"
+        "nativescript-globalevents": "^1.2.0"
     },
     "dependencies": {},
     "bootstrapper": "nativescript-plugin-seed"
