--- a/demo-ng/package.json
+++ b/demo-ng/package.json
@@ -6,10 +6,10 @@
   "nativescript": {
     "id": "dk.nota.accessdemo",
     "tns-android": {
-      "version": "3.2.0"
+      "version": "3.4.0"
     },
     "tns-ios": {
-      "version": "3.2.0"
+      "version": "3.4.0"
     }
   },
   "scripts": {
@@ -37,7 +37,7 @@
     "nativescript-theme-core": "^1.0.4",
     "reflect-metadata": "~0.1.10",
     "rxjs": "~5.4.2",
-    "tns-core-modules": "^3.2.0",
+    "tns-core-modules": "~3.4.0",
     "zone.js": "~0.8.12"
   },
   "devDependencies": {
