--- a/src/package.json
+++ b/src/package.json
@@ -6,8 +6,8 @@
     "typings": "index.d.ts",
     "nativescript": {
         "platforms": {
-            "android": "3.3.0",
-            "ios": "3.3.0"
+            "android": "4.1.0",
+            "ios": "4.1.0"
         },
         "plugin": {
             "nan": true,
@@ -72,14 +72,14 @@
         "npm-run-all": "^4.1.1",
         "prompt": "^1.0.0",
         "rimraf": "^2.5.0",
-        "tns-core-modules": "^3.3.0",
-        "tns-platform-declarations": "^3.2.0",
+        "tns-core-modules": "^4.1.0",
+        "tns-platform-declarations": "^4.1.0",
         "tslint": "^5.0.0",
-        "typescript": "~2.3.0"
+        "typescript": "~2.7.0"
     },
     "peerDependencies": {
-        "tns-core-modules": "^3.2.0",
-        "nativescript-globalevents": "^1.2.0"
+        "tns-core-modules": "^4.1.0",
+        "nativescript-globalevents": "~1.2.0"
     },
     "dependencies": {},
     "bootstrapper": "nativescript-plugin-seed"
