--- a/demo-ng/package.json
+++ b/demo-ng/package.json
@@ -22,43 +22,50 @@
     "build-ios-bundle": "npm run ns-bundle --ios --build-app"
   },
   "dependencies": {
-    "@angular/animations": "~4.4.0",
-    "@angular/common": "~4.4.0",
-    "@angular/compiler": "~4.4.0",
-    "@angular/core": "~4.4.0",
-    "@angular/forms": "~4.4.0",
-    "@angular/http": "~4.4.0",
-    "@angular/platform-browser": "~4.4.0",
-    "@angular/platform-browser-dynamic": "~4.4.0",
-    "@angular/router": "~4.4.0",
+    "@angular/animations": "~6.0.0",
+    "@angular/common": "~6.0.0",
+    "@angular/compiler": "~6.0.0",
+    "@angular/core": "~6.0.0",
+    "@angular/forms": "~6.0.0",
+    "@angular/http": "~6.0.0",
+    "@angular/platform-browser": "~6.0.0",
+    "@angular/platform-browser-dynamic": "~6.0.0",
+    "@angular/router": "~6.0.0",
     "@nota/nativescript-accessibility-ext": "file:../src",
-    "nativescript-angular": "~4.4.0",
-    "nativescript-globalevents": "^1.1.2",
+    "nativescript-angular": "^6.0.0",
+    "nativescript-globalevents": "^1.2.1",
     "nativescript-theme-core": "^1.0.4",
     "reflect-metadata": "~0.1.10",
-    "rxjs": "~5.4.2",
-    "tns-core-modules": "~3.4.0",
-    "zone.js": "~0.8.12"
+    "rxjs": "~6.0.0 || >=6.1.0",
+    "tns-core-modules": "^4.1.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~4.4.0",
-    "@ngtools/webpack": "^1.3.0",
+    "@angular-devkit/core": "~0.6.3",
     "babel-traverse": "6.25.0",
     "babel-types": "6.25.0",
     "babylon": "6.17.4",
-    "copy-webpack-plugin": "~4.0.1",
-    "extract-text-webpack-plugin": "~2.1.0",
     "lazy": "1.0.11",
     "nativescript-css-loader": "~0.26.1",
-    "nativescript-dev-sass": "~1.1.0",
-    "nativescript-dev-typescript": "^0.5.0",
-    "nativescript-dev-webpack": "^0.7.2",
+    "nativescript-dev-sass": "^1.6.0",
+    "nativescript-dev-typescript": "^0.7.1",
+    "nativescript-dev-webpack": "^0.12.0",
+    "nativescript-worker-loader": "~0.9.0",
+    "tns-platform-declarations": "^4.1.0",
+    "typescript": "~2.7.2",
+    "uglifyjs-webpack-plugin": "~1.2.5",
+    "webpack": "~4.6.0",
+    "webpack-cli": "~2.1.3",
+    "webpack-bundle-analyzer": "~2.13.0",
+    "webpack-sources": "~1.1.0",
+    "clean-webpack-plugin": "~0.1.19",
+    "copy-webpack-plugin": "~4.5.1",
     "raw-loader": "~0.5.1",
-    "resolve-url-loader": "~2.1.0",
-    "tns-platform-declarations": "^3.0.1",
-    "typescript": "^2.2.0",
-    "webpack": "^2.0.0",
-    "webpack-bundle-analyzer": "^2.8.2",
-    "webpack-sources": "~1.0.1"
+    "css-loader": "~0.28.11",
+    "extract-text-webpack-plugin": "~3.0.2",
+    "@angular/compiler-cli": "~6.0.0",
+    "@ngtools/webpack": "~6.0.3",
+    "resolve-url-loader": "~2.3.0",
+    "sass-loader": "~7.0.1"
   }
 }
