--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nota/nativescript-accessibility-ext",
-    "version": "3.4.0",
+    "version": "4.1.0-alpha.1",
     "description": "Nativescript plugin for enabling accessiblity features",
     "main": "index.js",
     "typings": "index.d.ts",
@@ -24,18 +24,27 @@
         "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
         "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
         "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
-        "plugin.link": "npm link && cd ../demo && npm link nativescript-accessibility-ext && cd ../src",
+        "plugin.link": "npm link && npm-run-all plugin.link.demo plugin.link.demo-ng",
+        "plugin.link.demo": "cd ../demo && npm link nativescript-accessibility-ext",
+        "plugin.link.demo-ng": "cd ../demo-ng && npm link nativescript-accessibility-ext",
         "plugin.tscwatch": "npm run tsc -- -w",
         "plugin.sasswatch": "npm run scss && npm run scss -- --watch",
         "plugin.watch": "npm-run-all --parallel plugin.tscwatch plugin.sasswatch",
-        "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
-        "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
+        "demo.android.start": "cd ../demo && tns run android --syncAllFiles",
+        "demo.ios.start": "cd ../demo && tns run ios --syncAllFiles",
+        "demo.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo.ios.start",
+        "demo.android": "npm i && npm-run-all tsc --parallel plugin.watch demo.android.start",
         "demo.reset": "cd ../demo && rimraf platforms",
-        "demo-ng.ios": "npm i && npm run tsc && cd ../demo-ng && tns run ios --syncAllFiles",
-        "demo-ng.android": "npm i && npm run tsc && cd ../demo-ng && tns run android --syncAllFiles",
-        "demo-ng.reset": "cd ../demo && rimraf platforms",
+        "demo-ng.android.start": "cd ../demo-ng && tns run android --syncAllFiles",
+        "demo-ng.ios.start": "cd ../demo-ng && tns run ios --syncAllFiles",
+        "demo-ng.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.ios.start",
+        "demo-ng.android": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.android.start",
+        "demo-ng.reset": "cd ../demo-ng && rimraf platforms",
         "plugin.prepare": "npm run build && (cd ../demo && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src) && (cd ../demo-ng && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src)",
-        "clean": "cd ../demo && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
+        "clean": "npm-run-all clean.demo clean.demo clean.demo-ng && npm run plugin.link",
+        "clean.demo": "cd ../demo && rimraf hooks node_modules platforms package-lock.json",
+        "clean.demo-ng": "cd ../demo-ng && rimraf hooks node_modules platforms package-lock.json",
+        "clean.src": "cd ../src && rimraf node_modules package-lock.json",
         "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'"
     },
     "repository": {
@@ -74,7 +83,7 @@
     "readmeFilename": "README.md",
     "devDependencies": {
         "nativescript-globalevents": "~1.2.0",
-        "node-sass": "~4.5.3",
+        "node-sass": "^4.9.0",
         "npm-run-all": "^4.1.1",
         "prompt": "^1.0.0",
         "rimraf": "^2.5.0",
@@ -85,7 +94,7 @@
     },
     "peerDependencies": {
         "tns-core-modules": "^4.1.0",
-        "nativescript-globalevents": "~1.2.0"
+        "nativescript-globalevents": "^1.2.0"
     },
     "dependencies": {},
     "bootstrapper": "nativescript-plugin-seed"
