--- a/demo-ng/tsconfig.esm.json
+++ b/demo-ng/tsconfig.esm.json
@@ -3,5 +3,9 @@
     "compilerOptions": {
         "module": "es2015",
         "moduleResolution": "node"
-    }
+    },
+    "include": [
+        "app/main.ts",
+        "../src/**/*.ts"
+    ]
 }
