--- a/demo/package.json
+++ b/demo/package.json
@@ -16,32 +16,32 @@
     "tns-core-modules": "^4.1.0"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "~5.0.0",
     "babel-traverse": "6.12.0",
     "babel-types": "6.11.1",
     "babylon": "6.8.4",
+    "clean-webpack-plugin": "~0.1.19",
+    "copy-webpack-plugin": "~4.5.1",
+    "css-loader": "~0.28.11",
+    "extract-text-webpack-plugin": "~3.0.2",
     "filewalker": "0.1.2",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
+    "karma": "^2.0.2",
     "karma-jasmine": "^1.0.2",
     "karma-nativescript-launcher": "^0.4.0",
     "lazy": "1.0.11",
     "nativescript-dev-typescript": "^0.7.1",
     "nativescript-dev-webpack": "^0.12.0",
+    "nativescript-worker-loader": "~0.9.0",
+    "raw-loader": "~0.5.1",
     "tns-platform-declarations": "^4.1.0",
     "tslint": "^5.0.0",
     "typescript": "~2.7.0",
-    "webpack": "~4.6.0",
-    "webpack-cli": "~2.1.3",
-    "webpack-bundle-analyzer": "~2.13.0",
-    "webpack-sources": "~1.1.0",
-    "clean-webpack-plugin": "~0.1.19",
-    "copy-webpack-plugin": "~4.5.1",
-    "raw-loader": "~0.5.1",
-    "css-loader": "~0.28.11",
-    "nativescript-worker-loader": "~0.9.0",
-    "extract-text-webpack-plugin": "~3.0.2",
     "uglifyjs-webpack-plugin": "~1.2.5",
-    "awesome-typescript-loader": "~5.0.0"
+    "webpack": "~4.6.0",
+    "webpack-bundle-analyzer": "~2.13.0",
+    "webpack-cli": "~2.1.3",
+    "webpack-sources": "~1.1.0"
   },
   "scripts": {
     "build.plugin": "cd ../src && npm run build",
