--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
         }
     },
     "scripts": {
+        "run-prettier": "prettier --write --config ../.prettierrc.json **/.ts ../demo-ng/app/**/*.ts ../demo/app/**/*.ts",
         "scss": "node-sass --recursive --output css scss",
         "tsc": "tsc -skipLibCheck",
         "build": "npm i && tsc && npm run scss",
@@ -35,8 +36,8 @@
         "demo.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo.ios.start",
         "demo.android": "npm i && npm-run-all tsc --parallel plugin.watch demo.android.start",
         "demo.reset": "cd ../demo && rimraf platforms",
-        "demo-ng.android.start": "cd ../demo-ng && tns run android --syncAllFiles",
-        "demo-ng.ios.start": "cd ../demo-ng && tns run ios --syncAllFiles",
+        "demo-ng.android.start": "cd ../demo-ng && tns run android --syncAllFiles --bundle",
+        "demo-ng.ios.start": "cd ../demo-ng && tns run ios --syncAllFiles --bundle",
         "demo-ng.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.ios.start",
         "demo-ng.android": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.android.start",
         "demo-ng.reset": "cd ../demo-ng && rimraf platforms",
@@ -85,6 +86,7 @@
         "nativescript-globalevents": "~1.2.0",
         "node-sass": "^4.9.0",
         "npm-run-all": "^4.1.1",
+        "prettier": "^1.13.4",
         "prompt": "^1.0.0",
         "rimraf": "^2.5.0",
         "tns-core-modules": "^4.1.0",
@@ -94,7 +96,7 @@
     },
     "peerDependencies": {
         "tns-core-modules": "^4.1.0",
-        "nativescript-globalevents": "^1.2.0"
+        "nativescript-globalevents": "^1.2.1"
     },
     "dependencies": {},
     "bootstrapper": "nativescript-plugin-seed"
