--- a/src/package.json
+++ b/src/package.json
@@ -36,8 +36,8 @@
         "demo.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo.ios.start",
         "demo.android": "npm i && npm-run-all tsc --parallel plugin.watch demo.android.start",
         "demo.reset": "cd ../demo && rimraf platforms",
-        "demo-ng.android.start": "cd ../demo-ng && tns run android --syncAllFiles --bundle",
-        "demo-ng.ios.start": "cd ../demo-ng && tns run ios --syncAllFiles --bundle",
+        "demo-ng.android.start": "cd ../demo-ng && tns run android --syncAllFiles",
+        "demo-ng.ios.start": "cd ../demo-ng && tns run ios --syncAllFiles",
         "demo-ng.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.ios.start",
         "demo-ng.android": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.android.start",
         "demo-ng.reset": "cd ../demo-ng && rimraf platforms",
