--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,9 @@
 {
-  "tabWidth": 2,
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "printWidth": 160,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "arrowParens": "always"
+  "tabWidth": 2,
+  "trailingComma": "all"
 }
