--- a/src/package.json
+++ b/src/package.json
@@ -6,8 +6,8 @@
     "typings": "index.d.ts",
     "nativescript": {
         "platforms": {
-            "android": "4.1.0",
-            "ios": "4.1.0"
+            "android": "5.0.0",
+            "ios": "5.0.0"
         },
         "plugin": {
             "nan": true,
@@ -83,19 +83,19 @@
     "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
     "readmeFilename": "README.md",
     "devDependencies": {
-        "nativescript-globalevents": "~1.2.0",
-        "node-sass": "^4.9.0",
+        "nativescript-globalevents": "^1.2.2",
+        "node-sass": "^4.10.0",
         "npm-run-all": "^4.1.1",
-        "prettier": "^1.13.4",
+        "prettier": "^1.15.2",
         "prompt": "^1.0.0",
         "rimraf": "^2.5.0",
-        "tns-core-modules": "^4.1.0",
-        "tns-platform-declarations": "^4.1.0",
-        "tslint": "^5.0.0",
-        "typescript": "~2.7.0"
+        "tns-core-modules": "^5.0.2",
+        "tns-platform-declarations": "^5.0.2",
+        "tslint": "^5.11.0",
+        "typescript": "^3.1.6"
     },
     "peerDependencies": {
-        "tns-core-modules": "^4.1.0",
+        "tns-core-modules": "^5.0.0",
         "nativescript-globalevents": "^1.2.1"
     },
     "dependencies": {},
