--- a/demo/package.json
+++ b/demo/package.json
@@ -1,47 +1,31 @@
 {
   "nativescript": {
-    "id": "org.nativescript.demo",
-    "tns-android": {
-      "version": "4.1.1"
-    },
+    "id": "dk.nota.a11ydemo",
     "tns-ios": {
-      "version": "4.1.1"
+      "version": "5.1.0"
+    },
+    "tns-android": {
+      "version": "5.1.0"
     }
   },
   "dependencies": {
     "@nota/nativescript-accessibility-ext": "file:../src",
-    "nativescript-globalevents": "^1.2.1",
+    "nativescript-globalevents": "^1.2.2",
     "nativescript-theme-core": "^1.0.4",
     "nativescript-unit-test-runner": "^0.3.4",
-    "tns-core-modules": "^4.1.0"
+    "tns-core-modules": "^5.1.2"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "~5.0.0",
-    "babel-traverse": "6.12.0",
-    "babel-types": "6.11.1",
-    "babylon": "6.8.4",
-    "clean-webpack-plugin": "~0.1.19",
-    "copy-webpack-plugin": "~4.5.1",
-    "css-loader": "~0.28.11",
-    "extract-text-webpack-plugin": "~3.0.2",
-    "filewalker": "0.1.2",
-    "jasmine-core": "^2.5.2",
-    "karma": "^2.0.2",
-    "karma-jasmine": "^1.0.2",
+    "filewalker": "0.1.3",
+    "jasmine-core": "^3.3.0",
+    "karma": "^3.1.4",
+    "karma-jasmine": "^2.0.1",
     "karma-nativescript-launcher": "^0.4.0",
-    "lazy": "1.0.11",
-    "nativescript-dev-typescript": "^0.7.1",
-    "nativescript-dev-webpack": "^0.12.0",
-    "nativescript-worker-loader": "~0.9.0",
-    "raw-loader": "~0.5.1",
-    "tns-platform-declarations": "^4.1.0",
-    "tslint": "^5.0.0",
-    "typescript": "~2.7.0",
-    "uglifyjs-webpack-plugin": "~1.2.5",
-    "webpack": "~4.6.0",
-    "webpack-bundle-analyzer": "~2.13.0",
-    "webpack-cli": "~2.1.3",
-    "webpack-sources": "~1.1.0"
+    "nativescript-dev-typescript": "^0.7.9",
+    "nativescript-dev-webpack": "^0.19.0",
+    "tns-platform-declarations": "^5.1.2",
+    "tslint": "^5.12.1",
+    "typescript": "~3.1.6"
   },
   "scripts": {
     "build.plugin": "cd ../src && npm run build",
