--- a/src/package.json
+++ b/src/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "5.0.0-alpha.1",
+  "version": "5.1.0-alpha.1",
   "description": "Add support for Accessiblity in NativeScript",
   "main": "index.js",
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "5.0.0",
-      "ios": "5.0.0"
+      "android": "5.1.0",
+      "ios": "5.1.0"
     },
     "plugin": {
       "nan": true,
@@ -90,18 +90,17 @@
     "nativescript-globalevents": "^1.2.2",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.15.3",
+    "prettier": "^1.16.4",
     "prettier-check": "^2.0.0",
-    "prompt": "^1.0.0",
     "rimraf": "^2.6.3",
-    "tns-core-modules": "^5.1.2",
+    "tns-core-modules": "~5.1.2",
     "tslint-no-circular-imports": "^0.6.1",
-    "tns-platform-declarations": "^5.1.2",
+    "tns-platform-declarations": "~5.1.2",
     "tslint": "^5.12.1",
     "typescript": "^3.1.6"
   },
   "peerDependencies": {
-    "tns-core-modules": "^5.0.5",
+    "tns-core-modules": "^5.1.2",
     "nativescript-globalevents": "^1.2.2"
   },
   "dependencies": {},
