--- a/src/package.json
+++ b/src/package.json
@@ -22,30 +22,21 @@
     "scss": "node-sass --recursive --output css scss",
     "tsc": "tsc -skipLibCheck",
     "build": "npm ci && npm-run-all lint tsc scss",
-    "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
-    "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
     "tslint": "tslint '**/*.ts' '../demo-ng/app/**/*.ts' '../demo/app/**/*.ts' --config $(git rev-parse --show-toplevel)/tslint.json --exclude \"**/node_modules/**\"",
     "tslint:fix": "npm run tslint -- --fix",
     "lint": "npm-run-all tslint format:check",
-    "plugin.link": "npm link && npm-run-all plugin.link.demo plugin.link.demo-ng",
-    "plugin.link.demo": "cd ../demo && npm link nativescript-accessibility-ext",
+    "plugin.link": "npm link && npm-run-all plugin.link.demo-ng",
     "plugin.link.demo-ng": "cd ../demo-ng && npm link nativescript-accessibility-ext",
     "plugin.tscwatch": "npm run tsc -- -w",
     "plugin.sasswatch": "npm run scss && npm run scss -- --watch",
     "plugin.watch": "npm-run-all --parallel plugin.tscwatch plugin.sasswatch",
-    "demo.android.start": "cd ../demo && tns run android --syncAllFiles",
-    "demo.ios.start": "cd ../demo && tns run ios --syncAllFiles",
-    "demo.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo.ios.start",
-    "demo.android": "npm i && npm-run-all tsc --parallel plugin.watch demo.android.start",
-    "demo.reset": "cd ../demo && rimraf platforms",
-    "demo-ng.android.start": "cd ../demo-ng && tns run android --syncAllFiles",
-    "demo-ng.ios.start": "cd ../demo-ng && tns run ios --syncAllFiles",
+    "demo-ng.android.start": "cd ../demo-ng && tns debug android --syncAllFiles",
+    "demo-ng.ios.start": "cd ../demo-ng && tns debug ios --syncAllFiles",
     "demo-ng.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.ios.start",
     "demo-ng.android": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.android.start",
     "demo-ng.reset": "cd ../demo-ng && rimraf platforms",
-    "plugin.prepare": "npm run build && (cd ../demo && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src) && (cd ../demo-ng && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src)",
-    "clean": "npm-run-all clean.demo clean.demo clean.demo-ng && npm run plugin.link",
-    "clean.demo": "cd ../demo && rimraf hooks node_modules platforms package-lock.json",
+    "plugin.prepare": "npm run build && (cd ../demo-ng && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src)",
+    "clean": "npm-run-all clean.demo-ng && npm run plugin.link",
     "clean.demo-ng": "cd ../demo-ng && rimraf hooks node_modules platforms package-lock.json",
     "clean.src": "cd ../src && rimraf node_modules package-lock.json",
     "ci.lint": "npm i && npm run lint"
@@ -92,14 +83,14 @@
     "prettier": "^1.16.4",
     "prettier-check": "^2.0.0",
     "rimraf": "^2.6.3",
-    "tns-core-modules": "~5.1.2",
-    "tslint-no-circular-imports": "^0.6.1",
-    "tns-platform-declarations": "~5.1.2",
-    "tslint": "^5.12.1",
-    "typescript": "^3.1.6"
+    "tns-core-modules": "~5.2.2",
+    "tslint-no-circular-imports": "^0.6.2",
+    "tns-platform-declarations": "~5.2.2",
+    "tslint": "^5.14.0",
+    "typescript": "~3.1.6"
   },
   "peerDependencies": {
-    "tns-core-modules": "^5.1.2",
+    "tns-core-modules": "^5.2.2",
     "nativescript-globalevents": "^1.2.2"
   },
   "dependencies": {},
