--- a/src/package.json
+++ b/src/package.json
@@ -17,28 +17,26 @@
     }
   },
   "scripts": {
-    "format": "prettier --write --config $(git rev-parse --show-toplevel)/.prettierrc.json '**/*.ts' '../demo-ng/app/**/*.ts' '../demo/app/**/*.ts'",
-    "format:check": "prettier-check --config $(git rev-parse --show-toplevel)/.prettierrc.json '**/*.ts' '../demo-ng/app/**/*.ts' '../demo/app/**/*.ts'",
+    "format": "prettier --write --config $(git rev-parse --show-toplevel)/.prettierrc.json '**/*.ts' '../demo/app/**/*.ts' '../demo/app/**/*.ts'",
+    "format:check": "prettier-check --config $(git rev-parse --show-toplevel)/.prettierrc.json '**/*.ts' '../demo/app/**/*.ts' '../demo/app/**/*.ts'",
     "scss": "node-sass --recursive --output css scss",
     "tsc": "tsc -skipLibCheck",
     "build": "npm ci && npm-run-all lint tsc scss",
-    "tslint": "tslint '**/*.ts' '../demo-ng/app/**/*.ts' '../demo/app/**/*.ts' --config $(git rev-parse --show-toplevel)/tslint.json --exclude \"**/node_modules/**\"",
+    "tslint": "tslint '**/*.ts' '../demo/app/**/*.ts' '../demo/app/**/*.ts' --config $(git rev-parse --show-toplevel)/tslint.json --exclude \"**/node_modules/**\"",
     "tslint:fix": "npm run tslint -- --fix",
     "lint": "npm-run-all tslint format:check",
-    "plugin.link": "npm link && npm-run-all plugin.link.demo-ng",
-    "plugin.link.demo-ng": "cd ../demo-ng && npm link nativescript-accessibility-ext",
     "plugin.tscwatch": "npm run tsc -- -w",
     "plugin.sasswatch": "npm run scss && npm run scss -- --watch",
     "plugin.watch": "npm-run-all --parallel plugin.tscwatch plugin.sasswatch",
-    "demo-ng.android.start": "cd ../demo-ng && tns debug android --syncAllFiles",
-    "demo-ng.ios.start": "cd ../demo-ng && tns debug ios --syncAllFiles",
-    "demo-ng.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.ios.start",
-    "demo-ng.android": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.android.start",
-    "demo-ng.reset": "cd ../demo-ng && rimraf platforms",
-    "plugin.prepare": "npm run build && (cd ../demo-ng && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src)",
-    "clean": "npm-run-all clean.demo-ng && npm run plugin.link",
-    "clean.demo-ng": "cd ../demo-ng && rimraf hooks node_modules platforms package-lock.json",
-    "clean.src": "cd ../src && rimraf node_modules package-lock.json",
+    "demo.android.start": "cd ../demo && tns debug android --syncAllFiles",
+    "demo.ios.start": "cd ../demo && tns debug ios --syncAllFiles",
+    "demo.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo.ios.start",
+    "demo.android": "npm i && npm-run-all tsc --parallel plugin.watch demo.android.start",
+    "demo.reset": "cd ../demo && rimraf platforms",
+    "plugin.prepare": "npm run build",
+    "clean": "npm-run-all clean.demo clean.src",
+    "clean.demo": "git clean -d -x -f $(git rev-parse --show-toplevel)/demo",
+    "clean.src": "git clean -d -x -f $(git rev-parse --show-toplevel)/src",
     "ci.lint": "npm i && npm run lint"
   },
   "repository": {
