--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,9 +12,18 @@
   "cSpell.words": [
     "Bitmask",
     "Focusable",
+    "Freiling",
+    "Morten",
+    "Sjøgren",
+    "bootstrapper",
+    "ddfreiling",
     "fontscale",
     "fontscales",
     "globalevents",
-    "radiobutton"
+    "gmail",
+    "mabs",
+    "radiobutton",
+    "sasswatch",
+    "tscwatch"
   ]
 }
