--- a/src/package.json
+++ b/src/package.json
@@ -72,7 +72,7 @@
     {
       "name": "Morten Anton Bach Sjøgren",
       "url": "http://mabs.dk",
-      "email": "mabs@mabs.dk"
+      "email": "m_abs@mabs.dk"
     },
     {
       "name": "Daniel Freiling",
