--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,9 +35,38 @@
   "cSpell.words": [
     "Bitmask",
     "Focusable",
+    "Freiling",
+    "Morten",
+    "Sjøgren",
+    "armeabi",
+    "assistive",
+    "bootstrapper",
+    "ddfreiling",
+    "devkit",
+    "devtool",
+    "downlevel",
     "fontscale",
     "fontscales",
     "globalevents",
-    "radiobutton"
+    "gmail",
+    "mabs",
+    "moduleid",
+    "nativescript",
+    "ngfactory",
+    "ngmodule",
+    "ngstyle",
+    "ngtools",
+    "nospace",
+    "nsconfig",
+    "oraclejdk",
+    "pathinfo",
+    "prettierrc",
+    "quotemark",
+    "radiobutton",
+    "sasswatch",
+    "toplevel",
+    "tscwatch",
+    "uglifyjs",
+    "xcode"
   ]
 }
