--- a/src/package.json
+++ b/src/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "5.1.0-alpha.2",
+  "version": "5.3.0-alpha.1",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "main": "index.js",
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "5.1.0",
-      "ios": "5.1.0"
+      "android": "5.3.0",
+      "ios": "5.3.0"
     },
     "plugin": {
       "nan": true,
@@ -69,7 +69,7 @@
       "email": "ddfreiling@gmail.com"
     }
   ],
-  "license": "BSD-3-Clause",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Notalib/nativescript-accessibility-ext/issues"
   },
@@ -78,17 +78,16 @@
   "devDependencies": {
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.16.4",
+    "prettier": "^1.17.0",
     "prettier-check": "^2.0.0",
     "rimraf": "^2.6.3",
     "tns-core-modules": "~5.3.0",
     "tslint-no-circular-imports": "^0.6.2",
-    "tns-platform-declarations": "~5.3.0",
-    "tslint": "^5.14.0",
+    "tslint": "^5.16.0",
     "typescript": "~3.1.6"
   },
   "peerDependencies": {
-    "tns-core-modules": "^5.2.2"
+    "tns-core-modules": "^5.3.0"
   },
   "dependencies": {},
   "bootstrapper": "nativescript-plugin-seed"
